[package]
name = "print_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
image = "0.25.2"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
